Left align copyright notice and add feedback link under signbank menu, use CSS to only apply these changes to the BSL site. Fixes %30.

--- a/media/bootstrap_css/bsl.css
+++ b/media/bootstrap_css/bsl.css
@@ -32,6 +32,14 @@ body, html {
         
 }
 
+#navbar #extrafeedback {
+  display: block;
+}
+
+#footer #copyright #notice {
+  float: left;
+}
+
 #logoholder {
     background-image: url(../uclimages/logo.gif);
     width: 265px;
